Squash several overlay bugs; refactor overlay into component

--- a/styles.scss
+++ b/styles.scss
@@ -27,28 +27,35 @@
     left: 0;
     right: 0;
     transform: scale(0);
-    display: flex;
     transition: .3s;
+    animation-name: zoom-in;
+    animation-duration: .3s;
+    &.false{ display: none; }
+    &.hover, &.loading{ transform: none; }
+}
+.loaded .overlay { display: none }
+
+@keyframes zoom-in{
+    0%{
+        transform: scale(0)
+    }
 }
 
 .pulse{
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 200px;
+    width: 200px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
-
-.loaded .pulse {
-    display: none;
-}
-
-.killed {
-    display: none;
-}
+.loaded .pulse { display: none }
 
 .pulsar {
     background: rgba(59, 179, 113, 1);
     animation-name: pulse;
-    animation-duration: 1.2s;
     animation-iteration-count: infinite;
     height: 100%;
     width: 100%;
@@ -57,16 +64,12 @@
     animation-fill-mode: both;
     border: 1px solid mediumseagreen;
     transition: background-color .3s;
+    animation-duration: 1.2s;
+    &:nth-child(1){ animation-delay: 0s; }
+    &:nth-child(2){ animation-delay: .3s }
+    &:nth-child(3){ animation-delay: .6s }
 }
 
-.pulsar:nth-child(1){
-    animation-delay: .3s;
-}
-
-.hover .overlay,
-.loading .overlay {
-    transform: none;
-}
 
 .temp-status {
     width: 40%;
@@ -118,7 +121,10 @@
 
 @keyframes pulse {
     0% {
-        transform: scale(.3);
+        transform: scale(0);
+    }
+    50%{
+        background: rgba(59, 179, 113, 1);
     }
     100% {
         background: rgba(59, 179, 113, 0);
